1998-09-30  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.[ch], gnome-support.c, main.c: replaced
	current session managment code with new one using
	gnome-mdi-session session managment from libgnomeui.

1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* hex-document.c: Added shortcut support

1998-09-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.[ch] (view_changed_cb): new function; connects to
	MDI view_changed signal and takes care of updating the
	"Group Data As" menu.
	* main.c (main): connect the above handler to MDI's view_changed
	signal.
	
1998-09-04  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* hex-document.c: Include <config.h>. Marked strings for
	translation.

	* ui.c: Likewise.

1998-08-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (draw_shadow): set backing pixmap and clear
	window area of the whole widget. this makes it look prettier
	with pixmap themes ;)
	(render_hex_lines, render_ascii_lines): clear background before
	minimizing displayed lines to at most gh->vis_lines: this way
	the whole display's background is always white.
	(gtk_hex_init): connect draw_shadow() to gtkhex's draw signal.
	unless this is done the shadows arent drawn after, say, changing
	notebook tabs containing gtkhex widgets.
	* gtkhex.c: removed debugging info.
	* gtkhex.h: remove public declaration of gtk_hex_init().
	* main.c: removed the nasty printf() at startup. god knows a
	remainder of what this was...
	
1998-08-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c (create_prefs_dialog), main.c (main), ghex.h:
	honor MDI preferences stuff just implemented in gnome-mdi.
	
1998-07-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, hex-document.c: use more GNOME_STOCK items.
	
1998-07-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c (create_prefs_dialog): use gtk_notebook_append_page() instead
	of gnome_property_box_append_page().
	
1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
